--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "@ionic/angular": "^5.4.4",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
+    "install": "^0.13.0",
+    "jquery": "^3.5.1",
     "ng2-file-upload": "^1.4.0",
+    "ngx-device-detector": "^2.0.1",
+    "ngx-extended-pdf-viewer": "^6.2.0-alpha.0",
     "ngx-youtube-player": "^9.1.0",
     "rxjs": "~6.5.5",
     "rxjs-compat": "^6.6.3",
