--- a/angular.json
+++ b/angular.json
@@ -39,13 +39,16 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "./node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
-              "./node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
+              "./node_modules/owl.carousel/dist/assets/owl.carousel.css",
+	            "./node_modules/owl.carousel/dist/assets/owl.theme.default.css",
               "src/styles.scss"
             ],
             "scripts": [
               "src/assets/js/compiler.js",
-              "./node_modules/jquery/dist/jquery.js"]
+              "./node_modules/jquery/dist/jquery.js",
+              "./node_modules/owl.carousel/dist/owl.carousel.js",
+              "./node_modules/blueimp-canvas-to-blob/js/canvas-to-blob.min.js",
+            ]
           },
           "configurations": {
             "production": {
