--- a/package.json
+++ b/package.json
@@ -25,15 +25,22 @@
     "@angular/router": "~10.0.5",
     "@ionic/angular": "^5.4.4",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@ngu/carousel": "^3.0.2",
     "@ngx-translate/core": "^13.0.0",
+    "animate.css": "^4.1.1",
+    "blueimp-canvas-to-blob": "^3.28.0",
     "bootstrap": "^4.5.0",
+    "hammerjs": "^2.0.8",
     "install": "^0.13.0",
     "jquery": "^3.5.1",
+    "ng-body-scroll-lock": "0.0.2",
     "ng2-file-upload": "^1.4.0",
+    "ng2-img-max": "^2.2.4",
     "ngx-device-detector": "^2.0.1",
     "ngx-extended-pdf-viewer": "^6.2.0-alpha.0",
-    "ngx-owl-carousel-o": "^4.0.0",
+    "ngx-owl-carousel": "^2.0.7",
     "ngx-youtube-player": "^9.1.0",
+    "owl.carousel": "^2.3.4",
     "pdfjs-dist": "^2.5.207",
     "primeng": "^11.0.0",
     "rxjs": "~6.5.5",
