--- a/angular.json
+++ b/angular.json
@@ -40,14 +40,14 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/owl.carousel/dist/assets/owl.carousel.css",
-	            "./node_modules/owl.carousel/dist/assets/owl.theme.default.css",
+              "./node_modules/owl.carousel/dist/assets/owl.theme.default.css",
               "src/styles.scss"
             ],
             "scripts": [
               "src/assets/js/compiler.js",
               "./node_modules/jquery/dist/jquery.js",
               "./node_modules/owl.carousel/dist/owl.carousel.js",
-              "./node_modules/blueimp-canvas-to-blob/js/canvas-to-blob.min.js",
+              "./node_modules/blueimp-canvas-to-blob/js/canvas-to-blob.min.js"
             ]
           },
           "configurations": {
@@ -84,7 +84,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "LearningAngular:build"
+            "browserTarget": "LearningAngular:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
