--- a/angular.json
+++ b/angular.json
@@ -35,19 +35,38 @@
                 "glob": "pdf.worker.*",
                 "input": "./node_modules/pdfjs-dist/build/",
                 "output": ""
+              },
+              {
+                "glob": "**/*",
+                "input": "./node_modules/ace-builds/src/",
+                "output": "/"
               }
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/owl.carousel/dist/assets/owl.carousel.css",
               "./node_modules/owl.carousel/dist/assets/owl.theme.default.css",
+              "./node_modules/highlight.js/styles/github.css",
+
+              "./node_modules/primeng/resources/themes/md-light-indigo/theme.css",
+              "./node_modules/primeng/resources/primeng.min.css",
+              "./node_modules/primeicons/primeicons.css",
+
               "src/styles.scss"
             ],
             "scripts": [
               "src/assets/js/compiler.js",
               "./node_modules/jquery/dist/jquery.js",
               "./node_modules/owl.carousel/dist/owl.carousel.js",
-              "./node_modules/blueimp-canvas-to-blob/js/canvas-to-blob.min.js"
+              "./node_modules/blueimp-canvas-to-blob/js/canvas-to-blob.min.js",
+
+              "./node_modules/ace-builds/src/ace.js",
+              "./node_modules/ace-builds/src/theme-eclipse.js",
+              "./node_modules/ace-builds/src/theme-monokai.js",
+              "./node_modules/ace-builds/src/mode-html.js"
+
+
+
             ]
           },
           "configurations": {
