--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/forms": "~10.0.5",
     "@angular/localize": "~10.0.5",
     "@angular/material": "^10.2.5",
+    "@angular/material-moment-adapter": "^11.0.3",
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
@@ -33,15 +34,20 @@
     "hammerjs": "^2.0.8",
     "install": "^0.13.0",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "ng-body-scroll-lock": "0.0.2",
+    "ng2-ace-editor": "^0.3.9",
     "ng2-file-upload": "^1.4.0",
     "ng2-img-max": "^2.2.4",
     "ngx-device-detector": "^2.0.1",
     "ngx-extended-pdf-viewer": "^6.2.0-alpha.0",
+    "ngx-highlight-js": "^11.1.0",
+    "ngx-highlightjs": "^4.1.3",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-youtube-player": "^9.1.0",
     "owl.carousel": "^2.3.4",
     "pdfjs-dist": "^2.5.207",
+    "primeicons": "^4.1.0",
     "primeng": "^11.0.0",
     "rxjs": "~6.5.5",
     "rxjs-compat": "^6.6.3",
