--- a/angular.json
+++ b/angular.json
@@ -47,11 +47,9 @@
               "./node_modules/owl.carousel/dist/assets/owl.carousel.css",
               "./node_modules/owl.carousel/dist/assets/owl.theme.default.css",
               "./node_modules/highlight.js/styles/github.css",
-
               "./node_modules/primeng/resources/themes/md-light-indigo/theme.css",
               "./node_modules/primeng/resources/primeng.min.css",
               "./node_modules/primeicons/primeicons.css",
-
               "src/styles.scss"
             ],
             "scripts": [
@@ -59,14 +57,10 @@
               "./node_modules/jquery/dist/jquery.js",
               "./node_modules/owl.carousel/dist/owl.carousel.js",
               "./node_modules/blueimp-canvas-to-blob/js/canvas-to-blob.min.js",
-
               "./node_modules/ace-builds/src/ace.js",
               "./node_modules/ace-builds/src/theme-eclipse.js",
               "./node_modules/ace-builds/src/theme-monokai.js",
               "./node_modules/ace-builds/src/mode-html.js"
-
-
-
             ]
           },
           "configurations": {
@@ -164,5 +158,8 @@
       }
     }
   },
-  "defaultProject": "LearningAngular"
+  "defaultProject": "LearningAngular",
+  "cli": {
+    "analytics": "516fea66-07f9-45bb-af7c-7cf309065223"
+  }
 }
