--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/architect": "^0.1200.5",
     "@angular/animations": "~10.0.5",
     "@angular/cdk": "^10.2.5",
     "@angular/common": "~10.0.5",
@@ -31,6 +32,7 @@
     "animate.css": "^4.1.1",
     "blueimp-canvas-to-blob": "^3.28.0",
     "bootstrap": "^4.5.0",
+    "file-saver": "^2.0.5",
     "hammerjs": "^2.0.8",
     "install": "^0.13.0",
     "jquery": "^3.5.1",
@@ -55,12 +57,13 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "8.4.1",
     "@angular-devkit/build-angular": "~0.1000.4",
     "@angular/cli": "~10.0.4",
     "@angular/compiler-cli": "~10.0.5",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -72,6 +75,8 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^4.7.2"
   }
 }
