--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ngx-youtube-player": "^9.1.0",
     "owl.carousel": "^2.3.4",
     "pdfjs-dist": "^2.5.207",
+    "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.0.0",
     "rxjs": "~6.5.5",
